# check-dns-records

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dnsrecords/: app.py  config.py  list_of_domains.txt
tests/: test_app.py
