[tool.poetry]
name = "check-dns-records"
version = "0.1.0"
description = "A simple tool to look for and check specific DNS records."
authors = ["Jonathan González <jgonf@safebytelabs.com>"]
license = "MPL2"
readme = "README.md"

# -- manually added - begin of block ----------------------
#
packages = [{ include = "dnsrecords", from = "src" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.2"
pylint = "^3.1.0"
mypy = "^1.10.0"

[tool.semantic_release]
branch = ["main", "dev"]
version_variables = ["src/dnsrecords/__init__.py:__version__"]

[tool.pytest.ini_options]
pythonpath = ["src"]
#
# -- manually added - end of block ------------------------

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.6.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
